[package]
name = "sysnames"
description = "Query Linux system call names and numbers at runtime"
license = "MIT"
version = "0.1.0"
authors = ["William Findlay <william@williamfindlay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bimap = "0.6.1"

[build-dependencies]
glob = "0.3.0"
csv = "1.1.6"
anyhow = "1.0.41"
