[package]
name = "sysnames"
description = "Query Linux system call names and numbers at runtime"
version = "0.1.2"
authors = ["William Findlay <william@williamfindlay.com>"]
repository = "https://github.com/willfindlay/sysnames-rs"
homepage = "https://github.com/willfindlay/sysnames-rs"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["linux", "syscall"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "1.4.0"
bimap = "0.6.1"

[build-dependencies]
glob = "0.3.0"
csv = "1.1.6"
